--- a/main.css
+++ b/main.css
@@ -72,4 +72,7 @@ body{
   padding: 16px 32px;
 }
 
-a:link, a:visited, a:hover, a:active { text-decoration: none; }
+.small-logo{color: white !important;}
+
+
+a:link, a:visited, a:hover, a:active { text-decoration: none; color: inherit; }
