--- a/main.css
+++ b/main.css
@@ -72,7 +72,11 @@ body{
   padding: 16px 32px;
 }
 
-.small-logo{color: white !important;}
+.small-logo{
+	a:link, a:visited, a:hover, a:active { text-decoration: none; 	color: white !important; }
+	}
+	
+#big-logo-id a:link, a:visited, a:hover, a:active{
+	 text-decoration: none; color: inherit; 
 
-
-a:link, a:visited, a:hover, a:active { text-decoration: none; color: inherit; }
+}
