--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@ body{
 	a:link, a:visited, a:hover, a:active { text-decoration: none; 	color: white !important; }
 	}
 
-#big-logo-id{color: #333;}
+#big-logo-id a{color: #333;}
 	
 #big-logo-id a, a:link, a:visited, a:hover, a:active{
 	 text-decoration: none; color: inherit; 
