--- a/main.css
+++ b/main.css
@@ -8,12 +8,33 @@
 }
 
 #gradnav {
-  background: #E8CBC0; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left top, #E8CBC0, #636FA4); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(bottom right, #E8CBC0, #636FA4); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bottom right, #E8CBC0, #636FA4); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, #E8CBC0, #636FA4); /* Standard syntax */
+  /*background: #e65c00; /* For browsers that do not support gradients */
+  /*background: -webkit-linear-gradient(left top, #E8CBC0, #636FA4); /* For Safari 5.1 to 6.0 */
+  /*background: -o-linear-gradient(bottom right, #E8CBC0, #636FA4); /* For Opera 11.1 to 12.0 */
+  /*background: -moz-linear-gradient(bottom right, #E8CBC0, #636FA4); /* For Firefox 3.6 to 15 */
+  /*background: linear-gradient(to bottom right, #E8CBC0, #636FA4); /* Standard syntax */
+  
+    background: #e65c00; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, #e65c00, #F9D423); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #e65c00, #F9D423); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #e65c00, #F9D423); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #e65c00, #F9D423); /* Standard syntax */
+  
+  
 }
+
+
+.big-logo-row{
+
+  background: #e65c00; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, #e65c00, #F9D423); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #e65c00, #F9D423); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #e65c00, #F9D423); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #e65c00, #F9D423); /* Standard syntax */
+
+	
+}
+
 
 #portfolio-row{
 		width: 80%;
