--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 #grad {
   
   background: #ECE9E6; /* For browsers that do not support gradients */
-	background: -webkit-linear-gradient(#ECE9E6, #FFFFFF); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(#ECE9E6, #FFFFFF); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(#ECE9E6, #FFFFFF); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(#ECE9E6, #FFFFFF); /* Standard syntax */
+	background: -webkit-linear-gradient(#FFEEDC, #ECE9E6); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#FFEEDC, #ECE9E6); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#FFEEDC #ECE9E6); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#FFEEDC, #ECE9E6); /* Standard syntax */
 }
 
 #gradnav {
