--- a/main.css
+++ b/main.css
@@ -1,10 +1,21 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 #grad {
   
-  background: #ECE9E6; /* For browsers that do not support gradients */
-	background: -webkit-linear-gradient(#FFEEDC, #ECE9E6); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(#FFEEDC, #ECE9E6); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(#FFEEDC #ECE9E6); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(#FFEEDC, #ECE9E6); /* Standard syntax */
+  /*background: #ECE9E6; /* For browsers that do not support gradients */
+	/*background: -webkit-linear-gradient(#FFEEDC, #ECE9E6); /* For Safari 5.1 to 6.0 */
+	/*background: -o-linear-gradient(#FFEEDC, #ECE9E6); /* For Opera 11.1 to 12.0 */
+	/*background: -moz-linear-gradient(#FFEEDC #ECE9E6); /* For Firefox 3.6 to 15 */
+	/*background: linear-gradient(#FFEEDC, #ECE9E6); /* Standard syntax */
+	
+	  background: #edf7ff; /* For browsers that do not support gradients */
+	background: -webkit-linear-gradient(#edf7ff, #eef2f3); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#edf7ff, #eef2f3); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#edf7ff, #eef2f3); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#edf7ff, #eef2f3); /* Standard syntax */
 }
 
 #gradnav {
@@ -46,6 +57,7 @@
 	color: gray;
         font-family: 'PT Sans', sans-serif;
 		padding-bottom: 30px;
+		margin-top: 16px;
 }
 
 body{
@@ -102,4 +114,109 @@ body{
 #big-logo-id a, a:link, a:visited, a:hover, a:active{
 	 text-decoration: none; color: inherit; 
 
+}
+
+
+/**NEW GRID------------------------------------*/
+	.title-arch {
+		text-align: center;
+		margin: 50px 0;
+		font-size: 22px;
+		letter-spacing: 2px;
+		text-transform: uppercase;
+	}
+.project {
+	/*width: 100%;*/
+	height: 400px;
+	background-image: url(/images/after.png);
+	background-size: cover;
+	background-position: center;
+	padding: 0 !important;
+	float:left;
+}
+
+.project-2 {
+	background-image: url(/images/zomb.png);
+}
+
+.project-3 {
+	background-image: url(/images/lookaway.png);
+}
+
+.project-4 {
+	background-image: url(/images/cemented.png);
+}
+
+.project-5 {
+	background-image: url(/images/pc-cat.png);
+}
+
+.project-6 {
+	background-image: url(/images/survival-night.png);
+}
+
+.project-hover {
+	width: 100%;
+	height: 100%;
+	color: #fff;
+	opacity: 0;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+	/*background-color: rgba(186, 232, 2, 0.7);*/
+	background-color: rgba(248, 202, 77, 0.7);
+	padding: 40% 30px !important;
+}
+
+.project-hover hr {
+	height: 30px;
+	width: 0;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+	background-color: rgba(255, 255, 255, 1);
+	border: 0;
+}
+
+.project-hover a {
+	color: rgba(255, 255, 255, 1);
+	padding: 2px 22px;
+	line-height: 40px;
+	border: 2px solid rgba(255, 255, 255, 1);
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+
+.project-hover a:hover {
+	border-color: rgba(51, 51, 51, 1);
+	color: rgba(51, 51, 51, 1);
+	background-color: #FFF;
+}
+
+.project:hover .project-hover {
+	opacity: 1;
+}
+
+.project:hover .project-hover hr {
+	width: 100%;
+	height: 5px;
+}
+
+@media (max-width: 420px) {
+.project {
+	width: 100%;
+}
+}
+
+@media (min-width: 1440px){
+	.project{
+		width: 500px;
+		height: 400px;
+		margin: 5px;
+		
+	}
 }
