--- a/social.css
+++ b/social.css
@@ -1,135 +1,85 @@
-
-
-.icon-circle .fa{
-    font-size           : 30px;
-    color               : #e84700;
-    margin              : 0 auto;
-    height              : 45px;
-    width               : 45px;
-    border-radius       : 50%;
-    border              :2px solid #e84700;
-    line-height         : 48px;
-    cursor              : pointer;
-    -webkit-transition  : all  ease-in-out 0.35s;
-    -moz-transition     : all  ease-in-out 0.35s;
-    -o-transition       : all  ease-in-out 0.35s;
-    -ms-transition      : all  ease-in-out 0.35s;
-    transition          : all  ease-in-out 0.20s,background-color ease-in-out 0.05s;
+.foot {
+    position:relative;
+    margin:0;
+    padding:0;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    display:flex;
+}
+.foot li {
+    list-style:none;
+}
+.foot li a {
+    position:relative;
+    display:block;
+    width:75px;
+    height:75px;
+    font-size:20px;
+    text-align:center;
+    line-height:80px;
+    color:#262626;
+    overflow:hidden;
+    /*added*/
+	padding: 20px;
+    margin:15px;
+    transform:rotate(45deg);
+    transition:.2s;
+    border:1px solid rgba(0,0,0,1);
+}
+.foot li a .fa{
+    transform:rotate(-45deg);
+    font-size: 3rem;
+}
+.foot li a:before {
+    content:'';
+    position:absolute;
+    bottom:-100%;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#262626;
+    transition:.2s;
+}
+.foot li a:hover:before {
+    bottom:0;
+}
+.foot li a:hover {
+    color:#fff;
+}
+.foot li:nth-child(1) a:before
+{
+    background:#3b5998;
+}
+.foot li:nth-child(2) a:before
+{
+    background:#00aced;
+}
+.foot li:nth-child(3) a:before
+{
+    background:#dd4b39;
+}
+.foot li:nth-child(4) a:before
+{
+    background:#007bb6;
+}
+.foot li:nth-child(5) a:before
+{
+    background:#bc2a8d;
 }
 
-.icon-circle  .fa:hover{
-    
-    background-color        : #e84700;    
-    color                   : #fff;
-    border                  : 1px solid #e84711;
-    -moz-box-shadow         : inset 0px 0px 0px 5px #ffffff;
-    -o-box-shadow           : inset 0px 0px 0px 5px #ffffff;
-    -ms-box-shadow          : inset 0px 0px 0px 5px #ffffff;
-    -webkit-box-shadow      : inset 0px 0px 0px 5px #ffffff;
-    box-shadow              : inset 0px 0px 0px 5px #ffffff;
-    -ms-transform           : scale(1.2,1.2); 
-    -webkit-transform       : scale(1.2,1.2);
-    -moz-transform          : scale(1.2,1.2); 
-    -o-transform            : scale(1.2,1.2); 
-    transform               : scale(1.2,1.2);  
+
+@media (max-width:420px){
+	.foot li a {
+		width: 50px;
+		height: 50px;
+		padding: 10px;
+		margin: 10px;
+	}
+	
+	#copy{
+		margin-bottom: 64px;
+	}
 }
 
-.icon-circle  i:before{
-    margin-left         : 0px;
-    font-size           : 30px;
-}
 
-@media (min-width:320px) and (max-width:768px) {
-
-
- .icon-circle .fa{
-    font-size           : 15px;
-    color               : #e84700;
-    margin              : 0 auto;
-    height              : 30px;
-    width               : 30px;
-    border-radius       : 50%;
-    border              :2px solid #e84700;
-    line-height         : 26px;
-    cursor              : pointer;
-    -webkit-transition  : all  ease-in-out 0.35s;
-    -moz-transition     : all  ease-in-out 0.35s;
-    -o-transition       : all  ease-in-out 0.35s;
-    -ms-transition      : all  ease-in-out 0.35s;
-    transition          : all  ease-in-out 0.20s,background-color ease-in-out 0.05s;
-}
-
-.icon-circle  .fa:hover{
-    
-    background-color        : #e84700;    
-    color                   : #fff;
-    border                  : 1px solid #e84711;
-    -moz-box-shadow         : inset 0px 0px 0px 5px #ffffff;
-    -o-box-shadow           : inset 0px 0px 0px 5px #ffffff;
-    -ms-box-shadow          : inset 0px 0px 0px 5px #ffffff;
-    -webkit-box-shadow      : inset 0px 0px 0px 5px #ffffff;
-    box-shadow              : inset 0px 0px 0px 5px #ffffff;
-    -ms-transform           : scale(1.2,1.2); 
-    -webkit-transform       : scale(1.2,1.2);
-    -moz-transform          : scale(1.2,1.2); 
-    -o-transform            : scale(1.2,1.2); 
-    transform               : scale(1.2,1.2);  
-}
-
-.icon-circle  i:before{
-    margin-left         : 0px;
-    font-size           : 20px;
-}   
-}
-
-.ifacebook .fa{
-    color               :#3B5998;
-    border              :2px solid #3B5998;
-}
-
-.ifacebook .fa:hover{
-    
-    background-color        : #3B5998;    
-    color                   : #fff;
-    border                  : 1px solid #3B5998;
-
-}
-
-.itwittter .fa{
-    color               : #33ccff;
-    border              :2px solid #33ccff;
-}
-
-.itwittter .fa:hover{
-    
-    background-color        : #33ccff;    
-    color                   : #fff;
-    border                  : 1px solid #33ccff;
-
-}
-
-.igoogle .fa{
-    color               : #BD3518;
-    border              :2px solid #BD3518;
-}
-
-.igoogle .fa:hover{
-    
-    background-color        : #BD3518;    
-    color                   : #fff;
-    border                  : 1px solid #BD3518;
-
-}
-
-.iLinkedin .fa{
-    color               : #007bb7;
-    border              :2px solid #007bb7;
-}
-
-.iLinkedin .fa:hover{
-    
-    background-color        :#007bb7;    
-    color                   : #fff;
-    border                  : 1px solid #007bb7;
-
-}
