--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@ body{
 .project {
 	/*width: 100%;*/
 	height: 400px;
-	background-image: url(/images/after.png);
+	background-image: url("/images/after.png");
 	background-size: cover;
 	background-position: center;
 	padding: 0 !important;
@@ -136,23 +136,23 @@ body{
 }
 
 .project-2 {
-	background-image: url(/images/zomb.png);
+	background-image: url("/images/zomb.png");
 }
 
 .project-3 {
-	background-image: url(/images/lookaway.png);
+	background-image: url("/images/lookaway.png");
 }
 
 .project-4 {
-	background-image: url(/images/cemented.png);
+	background-image: url("/images/cemented.png");
 }
 
 .project-5 {
-	background-image: url(/images/pc-cat.png);
+	background-image: url("/images/pc-cat.png");
 }
 
 .project-6 {
-	background-image: url(/images/survival-night.png);
+	background-image: url("/images/survival-night.png");
 }
 
 .project-hover {
